<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">NotifBot</string>
  <string name="service_name">NotifBotService</string>
  <string name="share_receiver_name">Add to NotifBot</string>

  <string name="toast_text_template">%1$s: %2$s</string>
  <string name="receiver_wrong_text">Cannot find app from \"%1$s\".</string>
  <string name="receiver_added_pkg">Added app %1$s.</string>
  <string name="receiver_pkg_exists">App %1$s was already added.</string>

  <string name="main_hint">
    These are the apps you added, click to remove:
    (&lt;a href="https://github.com/nuclear06/notifbot-serverless/blob/master/FAQ.md">How do I add apps?&lt;/a>)
  </string>

  <string name="dialog_title">Confirm</string>
  <string name="dialog_text">
    Are you sure you want to remove the app \"%1$s\" from %2$s?
  </string>
  <string name="dialog_yes">Yes</string>
  <string name="dialog_no">No</string>

  <string name="perm_title">Grant %1$s permission</string>
  <string name="perm_text">
    %1$s needs permission to access your notifications in order to function.
    Please turn it on on the next screen.
  </string>
  <string name="perm_yes">Continue</string>
  <string name="perm_no">No thanks</string>

  <string name="settings">Settings</string>
  <string name="pref_title_telegram_endpoint">Telegram API endpoint</string>
  <string name="pref_desc_telegram_endpoint_default">Default: https://api.telegram.org</string>
  <string name="pref_default_telegram_endpoint">https://api.telegram.org</string>
  <string name="pref_title_auto_dismiss">Auto dismiss notifications</string>
  <string name="pref_desc_auto_dismiss_yes">
    Auto dismiss notifications after they are successfully sent to cloud service.
  </string>
  <string name="pref_desc_auto_dismiss_no">
    Do not auto dismiss notifications.
  </string>
  <string name="pref_title_send_label">Show app name in Telegram messages</string>
  <string name="pref_desc_send_label_yes">
    Also show app name with notification content in Telegram messages.
  </string>
  <string name="pref_desc_send_label_no">
    Do not show app name in Telegram messages, only show notification content.
  </string>
  <string name="pref_title_screen_locked_only">Send only when screen is locked</string>
  <string name="pref_desc_screen_locked_only_yes">
    Send notifications to Telegram only when the screen is locked.
  </string>
  <string name="pref_desc_screen_locked_only_no">
    Send notifications regardless of screen state.
  </string>

  <string name="pref_title_network_timeout">Network timeout (seconds)</string>
  <string name="pref_desc_network_timeout">Timeout for Telegram API requests. Default: 30s.</string>

  <string name="pref_tag_about">pref_about</string>
  <string name="pref_header_about">About</string>
  <string name="pref_header_about_summary">NotifBot v0.11.0</string>

  <string name="about">About</string>
  <string name="about_title">
    NotifBot fork version By nuclear06
  </string>
  <string name="about_summary">
    This is an Open Source project.
  </string>
  <string name="credits">Credits</string>
  <string name="credit_icon">
    Part of the icon was from Material Design Icons,
    used under Apache License.
  </string>

  <string name="magic_box">Magic Box</string>
  <string name="magic_text">
    Some examples of things you can put in the magic box below are:

    &lt;ul>
      &lt;li>&amp;nbsp;
      An Android app id:&lt;br />
      com.smartthings.android
      &lt;/li>
      &lt;li>&amp;nbsp;
      A Google Play URL:&lt;br />
      https://play.google.com/store/apps/details?id=com.smartthings.android
      &lt;/li>
    &lt;/ul>

    Press back button (or use back gesture) to cancel.
  </string>
  <string name="go">Go</string>
  <string name="magic_invalid_uri">Invalid magic text: \"%1$s\".</string>

  <!-- App Picker -->
  <string name="add_app">Add App</string>
  <string name="add_app_title">Add App</string>
  <string name="search_apps_hint">Search apps...</string>
  <string name="show_system_apps">Show system apps</string>

  <!-- Error Log -->
  <string name="error_log">Error Log</string>
  <string name="error_log_title">Error Log</string>
  <string name="error_log_hint">Recent errors from Telegram message sending</string>
  <string name="clear_errors">Clear All</string>
  <string name="errors_cleared">Error log cleared</string>

  <!-- Telegram Configuration -->
  <string name="telegram_config_needed_title">Telegram Configuration Required</string>
  <string name="telegram_config_needed_text">
    Please configure your Telegram Bot to start receiving notifications.
  </string>
  <string name="telegram_config_success">Telegram configuration completed successfully!</string>
  <string name="telegram_step1_instruction">
    Step 1: Enter your Telegram Bot Token.
    \n\nIf you don\'t have a bot yet, talk to @BotFather on Telegram to create one.
  </string>
  <string name="telegram_step2_instruction">
    Step 2: Send a message to @%1$s on Telegram, then click the button below.
  </string>

  <string name="service_succeed">
    Successfully connected to service!
    You\'ll start getting notification in Telegram from now on.
  </string>
  <string name="no_service">
    Not connected to Telegram bot
  </string>
  <string name="notif_text">
    Please configure your Telegram Bot to receive notifications.
  </string>

  <!-- Notification channel -->
  <string name="channel_name">Service connection failure</string>
  <string name="channel_desc">
    The notification to indicate service connection failures.
  </string>
</resources>
