<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
  <Preference
      android:key="@string/pref_tag_about"
      android:title="@string/pref_header_about"
      android:summary="@string/pref_header_about_summary"
      android:fragment="com.yhsif.notifbot.settings.AboutPreferenceFragment"
      android:icon="@drawable/icon"
    />
  <EditTextPreference
      android:defaultValue="@string/pref_default_telegram_endpoint"
      android:key="telegram_endpoint"
      android:title="@string/pref_title_telegram_endpoint"
      android:summary="@string/pref_desc_telegram_endpoint_default"
      android:dialogTitle="@string/pref_title_telegram_endpoint"
      android:inputType="textUri"
    />
  <SwitchPreference
      android:defaultValue="false"
      android:key="auto_dismiss"
      android:title="@string/pref_title_auto_dismiss"
      android:summary="@string/pref_desc_auto_dismiss_no"
    />
  <SwitchPreference
      android:defaultValue="true"
      android:key="send_label"
      android:title="@string/pref_title_send_label"
      android:summary="@string/pref_desc_send_label_no"
    />
  <SwitchPreference
      android:defaultValue="false"
      android:key="screen_locked_only"
      android:title="@string/pref_title_screen_locked_only"
      android:summary="@string/pref_desc_screen_locked_only_no"
    />
</androidx.preference.PreferenceScreen>
