<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <androidx.appcompat.widget.Toolbar
      android:id="@+id/app_bar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:elevation="4dp"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:title="@string/error_log_title"
    />
  <TextView
      android:id="@+id/error_hint"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/margin_half"
      android:text="@string/error_log_hint"
      android:textAppearance="@android:style/TextAppearance.Small"
    />
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/error_list"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:padding="@dimen/margin_half"
    />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:padding="@dimen/margin_half"
      android:gravity="end"
      >
    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_errors"
      />
  </LinearLayout>
</LinearLayout>
